commit bilingual contents

--- a/docs/visual-basic/misc/bc36001.md
+++ b/docs/visual-basic/misc/bc36001.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC36001
 ms.assetid: d515daa2-f53d-424c-81fd-e9c4b12f331b
-ms.openlocfilehash: 3d24d7d732a04864cdab9a9938310fade9679ee2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d6f3ecc60e3ad5735689f5239bbdc922e606d992
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626483"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379406"
 ---
-# <a name="global-not-allowed-in-this-context-identifier-expected"></a><span data-ttu-id="4845a-102">'Global' non consentito in questo contesto; previsto identificatore</span><span class="sxs-lookup"><span data-stu-id="4845a-102">'Global' not allowed in this context; identifier expected</span></span>
-<span data-ttu-id="4845a-103">Il [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) parola chiave viene usata in un'istruzione in cui non è consentito.</span><span class="sxs-lookup"><span data-stu-id="4845a-103">The [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) keyword is used in a statement where it is not allowed.</span></span>  
+# <a name="global-not-allowed-in-this-context-identifier-expected"></a><span data-ttu-id="01ce8-102">'Global' non consentito in questo contesto; previsto identificatore</span><span class="sxs-lookup"><span data-stu-id="01ce8-102">'Global' not allowed in this context; identifier expected</span></span>
+<span data-ttu-id="01ce8-103">La parola chiave [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) viene utilizzata in un'istruzione in cui non è consentita.</span><span class="sxs-lookup"><span data-stu-id="01ce8-103">The [Global](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names) keyword is used in a statement where it is not allowed.</span></span>  
   
- <span data-ttu-id="4845a-104">La parola chiave `Global` consente di accedere a uno spazio dei nomi definito all'esterno della relativa gerarchia in cui deve essere compilato il codice.</span><span class="sxs-lookup"><span data-stu-id="4845a-104">The `Global` keyword allows you to access a namespace defined outside the namespace hierarchy in which your code is to be compiled.</span></span> <span data-ttu-id="4845a-105">`Global` definisce l'inizio del percorso di qualificazione al livello più esterno dello spazio dei nomi della libreria di classi .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="4845a-105">`Global` starts the qualification path at the outermost namespace level of the .NET Framework class library.</span></span>  
+ <span data-ttu-id="01ce8-104">La parola chiave `Global` consente di accedere a uno spazio dei nomi definito all'esterno della relativa gerarchia in cui deve essere compilato il codice.</span><span class="sxs-lookup"><span data-stu-id="01ce8-104">The `Global` keyword allows you to access a namespace defined outside the namespace hierarchy in which your code is to be compiled.</span></span> <span data-ttu-id="01ce8-105">`Global` definisce l'inizio del percorso di qualificazione al livello più esterno dello spazio dei nomi della libreria di classi .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="01ce8-105">`Global` starts the qualification path at the outermost namespace level of the .NET Framework class library.</span></span>  
   
- <span data-ttu-id="4845a-106">Alcune istruzioni, ad esempio `Imports` e `Namespace`, sono indipendenti dallo spazio dei nomi in cui viene compilato il codice.</span><span class="sxs-lookup"><span data-stu-id="4845a-106">Certain statements, such as `Imports` and `Namespace`, are independent of the namespace in which your code is to be compiled.</span></span> <span data-ttu-id="4845a-107">e richiedono un percorso di qualificazione completo che inizi con lo spazio dei nomi a livello di radice, ad esempio <xref:System> o <xref:Microsoft.VisualBasic>.</span><span class="sxs-lookup"><span data-stu-id="4845a-107">They require a full qualification path, starting from the root-level namespace, such as <xref:System> or <xref:Microsoft.VisualBasic>.</span></span> <span data-ttu-id="4845a-108">In queste istruzioni la parola chiave `Global` sarebbe superflua e comunque non è consentita.</span><span class="sxs-lookup"><span data-stu-id="4845a-108">In such statements, the `Global` keyword is superfluous and is not allowed.</span></span>  
+ <span data-ttu-id="01ce8-106">Alcune istruzioni, ad esempio `Imports` e `Namespace`, sono indipendenti dallo spazio dei nomi in cui viene compilato il codice.</span><span class="sxs-lookup"><span data-stu-id="01ce8-106">Certain statements, such as `Imports` and `Namespace`, are independent of the namespace in which your code is to be compiled.</span></span> <span data-ttu-id="01ce8-107">e richiedono un percorso di qualificazione completo che inizi con lo spazio dei nomi a livello di radice, ad esempio <xref:System> o <xref:Microsoft.VisualBasic>.</span><span class="sxs-lookup"><span data-stu-id="01ce8-107">They require a full qualification path, starting from the root-level namespace, such as <xref:System> or <xref:Microsoft.VisualBasic>.</span></span> <span data-ttu-id="01ce8-108">In queste istruzioni la parola chiave `Global` sarebbe superflua e comunque non è consentita.</span><span class="sxs-lookup"><span data-stu-id="01ce8-108">In such statements, the `Global` keyword is superfluous and is not allowed.</span></span>  
   
- <span data-ttu-id="4845a-109">**ID errore:** BC36001</span><span class="sxs-lookup"><span data-stu-id="4845a-109">**Error ID:** BC36001</span></span>  
+ <span data-ttu-id="01ce8-109">**ID errore:** BC36001</span><span class="sxs-lookup"><span data-stu-id="01ce8-109">**Error ID:** BC36001</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4845a-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4845a-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="01ce8-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="01ce8-110">To correct this error</span></span>  
   
-- <span data-ttu-id="4845a-111">Rimuovere la parola chiave `Global` dall'istruzione.</span><span class="sxs-lookup"><span data-stu-id="4845a-111">Remove the `Global` keyword from the statement.</span></span> <span data-ttu-id="4845a-112">Non è necessaria.</span><span class="sxs-lookup"><span data-stu-id="4845a-112">It is not needed.</span></span>  
+- <span data-ttu-id="01ce8-111">Rimuovere la parola chiave `Global` dall'istruzione.</span><span class="sxs-lookup"><span data-stu-id="01ce8-111">Remove the `Global` keyword from the statement.</span></span> <span data-ttu-id="01ce8-112">Non è necessaria.</span><span class="sxs-lookup"><span data-stu-id="01ce8-112">It is not needed.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4845a-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4845a-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="01ce8-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="01ce8-113">See also</span></span>
 
-- [<span data-ttu-id="4845a-114">Parola chiave Global</span><span class="sxs-lookup"><span data-stu-id="4845a-114">Global keyword</span></span>](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
-- [<span data-ttu-id="4845a-115">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="4845a-115">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [<span data-ttu-id="4845a-116">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="4845a-116">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
-- [<span data-ttu-id="4845a-117">Riferimenti e istruzione Imports</span><span class="sxs-lookup"><span data-stu-id="4845a-117">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+- [<span data-ttu-id="01ce8-114">Global (parola chiave)</span><span class="sxs-lookup"><span data-stu-id="01ce8-114">Global keyword</span></span>](../programming-guide/program-structure/namespaces.md#global-keyword-in-fully-qualified-names)
+- [<span data-ttu-id="01ce8-115">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="01ce8-115">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="01ce8-116">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="01ce8-116">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="01ce8-117">Riferimenti e istruzione Imports</span><span class="sxs-lookup"><span data-stu-id="01ce8-117">References and the Imports Statement</span></span>](../programming-guide/program-structure/references-and-the-imports-statement.md)
