--- a/docs/visual-basic/misc/bc36006.md
+++ b/docs/visual-basic/misc/bc36006.md
@@ -1,5 +1,5 @@
 ---
-title: Costruttore di attributo ha un parametro 'ByRef' di tipo '<typename>'; non è possibile usare i costruttori con parametri byref per applicare l'attributo
+title: Il costruttore di attributo ha un parametro 'ByRef' di tipo '<typename>'. Impossibile usare i costruttori con parametri byref per applicare l'attributo
 ms.date: 07/20/2015
 f1_keywords:
 - bc36006
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36006
 ms.assetid: 4c4e991f-3839-4196-bcfb-eb8464aa55e5
-ms.openlocfilehash: 0899812b7b80a96c28493f6effa99016e901679f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 91fa742f12a4c278a13f4432e1b90610c1bccecc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379160"
 ---
-# <a name="attribute-constructor-has-a-byref-parameter-of-type-typename-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a><span data-ttu-id="39ea5-102">Costruttore di attributo ha un parametro 'ByRef' di tipo '\<nomeTipo >'; non è possibile usare i costruttori con parametri byref per applicare l'attributo</span><span class="sxs-lookup"><span data-stu-id="39ea5-102">Attribute constructor has a 'ByRef' parameter of type '\<typename>'; cannot use constructors with byref parameters to apply the attribute</span></span>
-<span data-ttu-id="39ea5-103">È possibile applicare l'attributo a un elemento di programmazione usando un costruttore di attributo che accetta un parametro `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="39ea5-103">An attribute is applied to a programming element using an attribute constructor that takes a `ByRef` parameter.</span></span>  
+# <a name="attribute-constructor-has-a-byref-parameter-of-type-typename-cannot-use-constructors-with-byref-parameters-to-apply-the-attribute"></a><span data-ttu-id="7fc09-102">Il costruttore di attributo ha un parametro 'ByRef' di tipo '\<typename>'. Impossibile usare i costruttori con parametri byref per applicare l'attributo</span><span class="sxs-lookup"><span data-stu-id="7fc09-102">Attribute constructor has a 'ByRef' parameter of type '\<typename>'; cannot use constructors with byref parameters to apply the attribute</span></span>
+<span data-ttu-id="7fc09-103">È possibile applicare l'attributo a un elemento di programmazione usando un costruttore di attributo che accetta un parametro `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="7fc09-103">An attribute is applied to a programming element using an attribute constructor that takes a `ByRef` parameter.</span></span>  
   
- <span data-ttu-id="39ea5-104">Gli attributi vengono applicati in fase di compilazione ed è necessario che il compilatore passi valori concreti al costruttore di attributo.</span><span class="sxs-lookup"><span data-stu-id="39ea5-104">Attributes are applied at compile time, and the compiler needs concrete values to pass to the attribute constructor.</span></span> <span data-ttu-id="39ea5-105">Un parametro `ByRef` accetta un puntatore a un valore che non può essere valutato in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="39ea5-105">A `ByRef` parameter takes a pointer to a value, which cannot be evaluated at compile time.</span></span>  
+ <span data-ttu-id="7fc09-104">Gli attributi vengono applicati in fase di compilazione ed è necessario che il compilatore passi valori concreti al costruttore di attributo.</span><span class="sxs-lookup"><span data-stu-id="7fc09-104">Attributes are applied at compile time, and the compiler needs concrete values to pass to the attribute constructor.</span></span> <span data-ttu-id="7fc09-105">Un parametro `ByRef` accetta un puntatore a un valore che non può essere valutato in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="7fc09-105">A `ByRef` parameter takes a pointer to a value, which cannot be evaluated at compile time.</span></span>  
   
- <span data-ttu-id="39ea5-106">È possibile definire un costruttore di attributo che accetta il parametro `ByRef` e usarlo per vari scopi quali l'eredità, ma quando l'attributo viene applicato è necessario usare un costruttore che non accetta parametri `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="39ea5-106">You can define an attribute constructor that takes a `ByRef` parameter, and you can use it for purposes such as inheriting, but when you apply the attribute you must use a constructor that does not take any `ByRef` parameters.</span></span>  
+ <span data-ttu-id="7fc09-106">È possibile definire un costruttore di attributo che accetta il parametro `ByRef` e usarlo per vari scopi quali l'eredità, ma quando l'attributo viene applicato è necessario usare un costruttore che non accetta parametri `ByRef` .</span><span class="sxs-lookup"><span data-stu-id="7fc09-106">You can define an attribute constructor that takes a `ByRef` parameter, and you can use it for purposes such as inheriting, but when you apply the attribute you must use a constructor that does not take any `ByRef` parameters.</span></span>  
   
- <span data-ttu-id="39ea5-107">**ID errore:** BC36006</span><span class="sxs-lookup"><span data-stu-id="39ea5-107">**Error ID:** BC36006</span></span>  
+ <span data-ttu-id="7fc09-107">**ID errore:** BC36006</span><span class="sxs-lookup"><span data-stu-id="7fc09-107">**Error ID:** BC36006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="39ea5-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="39ea5-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7fc09-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7fc09-108">To correct this error</span></span>  
   
-- <span data-ttu-id="39ea5-109">Applicare l'attributo usando un costruttore che non accetta parametri `ByRef` oppure non applicare l'attributo.</span><span class="sxs-lookup"><span data-stu-id="39ea5-109">Apply the attribute using a constructor that does not take any `ByRef` parameters, or do not apply the attribute at all.</span></span>  
+- <span data-ttu-id="7fc09-109">Applicare l'attributo usando un costruttore che non accetta parametri `ByRef` oppure non applicare l'attributo.</span><span class="sxs-lookup"><span data-stu-id="7fc09-109">Apply the attribute using a constructor that does not take any `ByRef` parameters, or do not apply the attribute at all.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="39ea5-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="39ea5-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7fc09-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7fc09-110">See also</span></span>
 
-- [<span data-ttu-id="39ea5-111">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="39ea5-111">Passing Arguments by Value and by Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [<span data-ttu-id="39ea5-112">ByRef</span><span class="sxs-lookup"><span data-stu-id="39ea5-112">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
+- [<span data-ttu-id="7fc09-111">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="7fc09-111">Passing Arguments by Value and by Reference</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [<span data-ttu-id="7fc09-112">ByRef</span><span class="sxs-lookup"><span data-stu-id="7fc09-112">ByRef</span></span>](../language-reference/modifiers/byref.md)
