--- a/docs/visual-basic/misc/bc36009.md
+++ b/docs/visual-basic/misc/bc36009.md
@@ -1,5 +1,5 @@
 ---
-title: "' GoTo <linelabel>' non è valido perché '<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione"
+title: "'GoTo <linelabel>' non è valida perché '<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc36009
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC36009
 ms.assetid: ebec3cac-d378-4e9b-a792-12e9ece5599e
-ms.openlocfilehash: 9c9b902e343f046b94512a97b2bbb868fb671340
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b3ab3a27dc3c3bbc4d44bf346204753c206b86a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633488"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379095"
 ---
-# <a name="goto-linelabel-is-not-valid-because-linelabel-is-inside-a-using-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="fe626-102">' GoTo \<etichettariga >' non è valido perché '\<etichettariga >' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione</span><span class="sxs-lookup"><span data-stu-id="fe626-102">'GoTo \<linelabel>' is not valid because '\<linelabel>' is inside a 'Using' statement that does not contain this statement</span></span>
-<span data-ttu-id="fe626-103">Un'istruzione `GoTo` all'esterno di un costruzione `Using` prova a diramarsi all'etichetta di una riga all'interno della costruzione.</span><span class="sxs-lookup"><span data-stu-id="fe626-103">A `GoTo` statement outside a `Using` construction attempts to branch to a line label inside the construction.</span></span>  
+# <a name="goto-linelabel-is-not-valid-because-linelabel-is-inside-a-using-statement-that-does-not-contain-this-statement"></a><span data-ttu-id="c92b5-102">'GoTo \<linelabel>' non è valida perché '\<linelabel>' si trova all'interno di un'istruzione 'Using' che non contiene questa istruzione</span><span class="sxs-lookup"><span data-stu-id="c92b5-102">'GoTo \<linelabel>' is not valid because '\<linelabel>' is inside a 'Using' statement that does not contain this statement</span></span>
+<span data-ttu-id="c92b5-103">Un'istruzione `GoTo` all'esterno di un costruzione `Using` prova a diramarsi all'etichetta di una riga all'interno della costruzione.</span><span class="sxs-lookup"><span data-stu-id="c92b5-103">A `GoTo` statement outside a `Using` construction attempts to branch to a line label inside the construction.</span></span>  
   
- <span data-ttu-id="fe626-104">Non sono consentite diramazioni dall'esterno di una costruzione `Using`...`End Using` all'interno della costruzione.</span><span class="sxs-lookup"><span data-stu-id="fe626-104">It is not valid to branch from anywhere outside a `Using`...`End Using` construction to anywhere inside the construction.</span></span>  
+ <span data-ttu-id="c92b5-104">Non sono consentite diramazioni dall'esterno di una costruzione `Using`...`End Using` all'interno della costruzione.</span><span class="sxs-lookup"><span data-stu-id="c92b5-104">It is not valid to branch from anywhere outside a `Using`...`End Using` construction to anywhere inside the construction.</span></span>  
   
- <span data-ttu-id="fe626-105">**ID errore:** BC36009</span><span class="sxs-lookup"><span data-stu-id="fe626-105">**Error ID:** BC36009</span></span>  
+ <span data-ttu-id="c92b5-105">**ID errore:** BC36009</span><span class="sxs-lookup"><span data-stu-id="c92b5-105">**Error ID:** BC36009</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fe626-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fe626-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c92b5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c92b5-106">To correct this error</span></span>  
   
-- <span data-ttu-id="fe626-107">Modificare l'etichetta della riga nell'istruzione `GoTo` su un'etichetta non inclusa in una costruzione `For`...`Next`, `For Each`...`Next`, `SyncLock`...`End SyncLock`, `Try`...`Catch`...`Finally`, `With`...`End With`o `Using`...`End Using` .</span><span class="sxs-lookup"><span data-stu-id="fe626-107">Change the line label in the `GoTo` statement to a label that is not inside any `For`...`Next`, `For Each`...`Next`, `SyncLock`...`End SyncLock`, `Try`...`Catch`...`Finally`, `With`...`End With`, or `Using`...`End Using` construction.</span></span>  
+- <span data-ttu-id="c92b5-107">Modificare l'etichetta della riga nell'istruzione `GoTo` su un'etichetta non inclusa in una costruzione `For`...`Next`, `For Each`...`Next`, `SyncLock`...`End SyncLock`, `Try`...`Catch`...`Finally`, `With`...`End With`o `Using`...`End Using` .</span><span class="sxs-lookup"><span data-stu-id="c92b5-107">Change the line label in the `GoTo` statement to a label that is not inside any `For`...`Next`, `For Each`...`Next`, `SyncLock`...`End SyncLock`, `Try`...`Catch`...`Finally`, `With`...`End With`, or `Using`...`End Using` construction.</span></span>  
   
-     <span data-ttu-id="fe626-108">-oppure-</span><span class="sxs-lookup"><span data-stu-id="fe626-108">-or-</span></span>  
+     <span data-ttu-id="c92b5-108">-oppure-</span><span class="sxs-lookup"><span data-stu-id="c92b5-108">-or-</span></span>  
   
-- <span data-ttu-id="fe626-109">Rimuovere completamente l'istruzione `GoTo` .</span><span class="sxs-lookup"><span data-stu-id="fe626-109">Remove the `GoTo` statement entirely.</span></span> <span data-ttu-id="fe626-110">L'unico sistema per inserire una costruzione `Using`...`End Using` consiste nel controllare il passaggio alla stessa istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="fe626-110">The only way you can enter a `Using`...`End Using` construction is to allow control to pass to the `Using` statement itself.</span></span>  
+- <span data-ttu-id="c92b5-109">Rimuovere completamente l'istruzione `GoTo` .</span><span class="sxs-lookup"><span data-stu-id="c92b5-109">Remove the `GoTo` statement entirely.</span></span> <span data-ttu-id="c92b5-110">L'unico sistema per inserire una costruzione `Using`...`End Using` consiste nel controllare il passaggio alla stessa istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="c92b5-110">The only way you can enter a `Using`...`End Using` construction is to allow control to pass to the `Using` statement itself.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fe626-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fe626-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c92b5-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c92b5-111">See also</span></span>
 
-- [<span data-ttu-id="fe626-112">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="fe626-112">GoTo Statement</span></span>](../../visual-basic/language-reference/statements/goto-statement.md)
-- [<span data-ttu-id="fe626-113">Istruzione Using</span><span class="sxs-lookup"><span data-stu-id="fe626-113">Using Statement</span></span>](../../visual-basic/language-reference/statements/using-statement.md)
+- [<span data-ttu-id="c92b5-112">Istruzione GoTo</span><span class="sxs-lookup"><span data-stu-id="c92b5-112">GoTo Statement</span></span>](../language-reference/statements/goto-statement.md)
+- [<span data-ttu-id="c92b5-113">Istruzione using</span><span class="sxs-lookup"><span data-stu-id="c92b5-113">Using Statement</span></span>](../language-reference/statements/using-statement.md)
