--- a/docs/visual-basic/misc/bc36559.md
+++ b/docs/visual-basic/misc/bc36559.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile utilizzare la proprietà di<propertyname>membro di tipo anonimo '' per dedurre il tipo di un'altra proprietà del membro<propertyname>perché il tipo di '' non è ancora stabilito
+title: Impossibile usare la proprietà di membro di tipo anonimo '<propertyname>' per dedurre il tipo di un'altra proprietà di membro perché il tipo di '<propertyname>' non è ancora stabilito
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36559
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC36559
 ms.assetid: 58ab8d35-9d85-4aca-8b4e-f232d7e4af61
-ms.openlocfilehash: f502c886eb7ac5418d492e958e86aed96672ff4e
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: b87f5de3138ce5b3c5ad37decd2b47deb8f62946
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512690"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378298"
 ---
-# <a name="anonymous-type-member-property-propertyname-cannot-be-used-to-infer-the-type-of-another-member-property-because-the-type-of-propertyname-is-not-yet-established"></a><span data-ttu-id="2e5a4-102">Non è possibile usare la\<proprietà' propertyName >' del membro di tipo anonimo per dedurre il tipo di un'altra proprietà\<del membro perché il tipo di ' propertyName >' non è ancora stabilito</span><span class="sxs-lookup"><span data-stu-id="2e5a4-102">Anonymous type member property '\<propertyname>' cannot be used to infer the type of another member property because the type of '\<propertyname>' is not yet established</span></span>
+# <a name="anonymous-type-member-property-propertyname-cannot-be-used-to-infer-the-type-of-another-member-property-because-the-type-of-propertyname-is-not-yet-established"></a><span data-ttu-id="0d519-102">Impossibile usare la proprietà di membro di tipo anonimo '\<propertyname>' per dedurre il tipo di un'altra proprietà di membro perché il tipo di '\<propertyname>' non è ancora stabilito</span><span class="sxs-lookup"><span data-stu-id="0d519-102">Anonymous type member property '\<propertyname>' cannot be used to infer the type of another member property because the type of '\<propertyname>' is not yet established</span></span>
 
-<span data-ttu-id="2e5a4-103">Fino a quando non viene stabilito il tipo di una proprietà di tipo anonimo, non può essere usata per stabilire il tipo di un'altra proprietà.</span><span class="sxs-lookup"><span data-stu-id="2e5a4-103">Until the type of an anonymous type property is established, it cannot be used to establish the type of another property.</span></span> <span data-ttu-id="2e5a4-104">Ad esempio, nella dichiarazione seguente `.IDName = .LastName` non è valido perché `.LastName` non è ancora stato inizializzato.</span><span class="sxs-lookup"><span data-stu-id="2e5a4-104">For example, in the following declaration `.IDName = .LastName` is not valid because `.LastName` has not yet been initialized.</span></span>
+<span data-ttu-id="0d519-103">Fino a quando non viene stabilito il tipo di una proprietà di tipo anonimo, non può essere usata per stabilire il tipo di un'altra proprietà.</span><span class="sxs-lookup"><span data-stu-id="0d519-103">Until the type of an anonymous type property is established, it cannot be used to establish the type of another property.</span></span> <span data-ttu-id="0d519-104">Ad esempio, nella dichiarazione seguente `.IDName = .LastName` non è valido perché `.LastName` non è ancora stato inizializzato.</span><span class="sxs-lookup"><span data-stu-id="0d519-104">For example, in the following declaration `.IDName = .LastName` is not valid because `.LastName` has not yet been initialized.</span></span>
 
 ```vb
 ' Not valid.
 Dim anon1 = New With {Key .IDName = .LastName, Key .LastName = "Jones"}
 ```
 
-<span data-ttu-id="2e5a4-105">**ID errore:** BC36559</span><span class="sxs-lookup"><span data-stu-id="2e5a4-105">**Error ID:** BC36559</span></span>
+<span data-ttu-id="0d519-105">**ID errore:** BC36559</span><span class="sxs-lookup"><span data-stu-id="0d519-105">**Error ID:** BC36559</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e5a4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2e5a4-106">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="0d519-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0d519-106">To correct this error</span></span>
 
-- <span data-ttu-id="2e5a4-107">Stabilire il tipo della proprietà prima di usarla per inizializzare un'altra proprietà.</span><span class="sxs-lookup"><span data-stu-id="2e5a4-107">Establish the type of the property before using it to initialize another property.</span></span>
+- <span data-ttu-id="0d519-107">Stabilire il tipo della proprietà prima di usarla per inizializzare un'altra proprietà.</span><span class="sxs-lookup"><span data-stu-id="0d519-107">Establish the type of the property before using it to initialize another property.</span></span>
 
   ```vb
   Dim anon2 = New With {Key .LastName = "Jones", Key .IDName = .LastName}
   ```
 
-## <a name="see-also"></a><span data-ttu-id="2e5a4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2e5a4-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0d519-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0d519-108">See also</span></span>
 
-- [<span data-ttu-id="2e5a4-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="2e5a4-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="2e5a4-110">Procedura: Deduce i tipi e i nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="2e5a4-110">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [<span data-ttu-id="0d519-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="0d519-109">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="0d519-110">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="0d519-110">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
