--- a/docs/visual-basic/misc/bc36589.md
+++ b/docs/visual-basic/misc/bc36589.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>'del metodo di estensione '<methodname>'definito '<typename>' non può essere dedotto
+title: Non è possibile dedurre il parametro di tipo '<typeparametername>' del metodo di estensione '<methodname>' definito in '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36589
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC36589
 ms.assetid: 4676a7a5-934b-4b74-b640-48065fc07e94
-ms.openlocfilehash: 1d9fc33deb5bcdc879da3f10b36e6bff1df0f63b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 18f0b4d4f3df3e36b085fd89fb896c3861083c80
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632455"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377314"
 ---
-# <a name="type-parameter-typeparametername-for-extension-method-methodname-defined-in-typename-cannot-be-inferred"></a><span data-ttu-id="aafa4-102">Parametro di tipo '\<nomeparametrotipo >' del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' non può essere dedotto</span><span class="sxs-lookup"><span data-stu-id="aafa4-102">Type parameter '\<typeparametername>' for extension method '\<methodname>' defined in '\<typename>' cannot be inferred</span></span>
-<span data-ttu-id="aafa4-103">È stato chiamato un metodo di estensione senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non è riuscita per uno degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="aafa4-103">A generic extension method is called without supplying a type argument list, and type inference fails for one of the type arguments.</span></span>  
+# <a name="type-parameter-typeparametername-for-extension-method-methodname-defined-in-typename-cannot-be-inferred"></a><span data-ttu-id="0575f-102">Non è possibile dedurre il parametro di tipo '\<typeparametername>' del metodo di estensione '\<methodname>' definito in '\<typename>'</span><span class="sxs-lookup"><span data-stu-id="0575f-102">Type parameter '\<typeparametername>' for extension method '\<methodname>' defined in '\<typename>' cannot be inferred</span></span>
+<span data-ttu-id="0575f-103">È stato chiamato un metodo di estensione senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non è riuscita per uno degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="0575f-103">A generic extension method is called without supplying a type argument list, and type inference fails for one of the type arguments.</span></span>  
   
- <span data-ttu-id="aafa4-104">Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="aafa4-104">When you call a generic procedure, you normally supply a type argument for each type parameter defined by the procedure.</span></span> <span data-ttu-id="aafa4-105">È però possibile omettere completamente l'elenco degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="aafa4-105">However, you have the alternative of omitting the type argument list entirely.</span></span> <span data-ttu-id="aafa4-106">In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata.</span><span class="sxs-lookup"><span data-stu-id="aafa4-106">When you do this, the compiler attempts to infer the type of each type argument from the context of your call.</span></span> <span data-ttu-id="aafa4-107">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="aafa4-107">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
+ <span data-ttu-id="0575f-104">Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="0575f-104">When you call a generic procedure, you normally supply a type argument for each type parameter defined by the procedure.</span></span> <span data-ttu-id="0575f-105">È però possibile omettere completamente l'elenco degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="0575f-105">However, you have the alternative of omitting the type argument list entirely.</span></span> <span data-ttu-id="0575f-106">In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata.</span><span class="sxs-lookup"><span data-stu-id="0575f-106">When you do this, the compiler attempts to infer the type of each type argument from the context of your call.</span></span> <span data-ttu-id="0575f-107">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="0575f-107">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
   
- <span data-ttu-id="aafa4-108">**ID errore:** BC36589</span><span class="sxs-lookup"><span data-stu-id="aafa4-108">**Error ID:** BC36589</span></span>  
+ <span data-ttu-id="0575f-108">**ID errore:** BC36589</span><span class="sxs-lookup"><span data-stu-id="0575f-108">**Error ID:** BC36589</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aafa4-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aafa4-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0575f-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0575f-109">To correct this error</span></span>  
   
-- <span data-ttu-id="aafa4-110">Verificare che i tipi degli argomenti normali siano tali che l'inferenza del tipo sia coerente con i parametri di tipo dichiarati per la routine generica.</span><span class="sxs-lookup"><span data-stu-id="aafa4-110">Make sure the types of the normal arguments are such that type inference is consistent with the type parameters declared for the generic procedure.</span></span>  
+- <span data-ttu-id="0575f-110">Verificare che i tipi degli argomenti normali siano tali che l'inferenza del tipo sia coerente con i parametri di tipo dichiarati per la routine generica.</span><span class="sxs-lookup"><span data-stu-id="0575f-110">Make sure the types of the normal arguments are such that type inference is consistent with the type parameters declared for the generic procedure.</span></span>  
   
-     <span data-ttu-id="aafa4-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="aafa4-111">-or-</span></span>  
+     <span data-ttu-id="0575f-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="0575f-111">-or-</span></span>  
   
-- <span data-ttu-id="aafa4-112">Chiamare la routine generica con un elenco completo di argomenti di tipo in modo da non rendere necessaria l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="aafa4-112">Call the generic procedure with a complete type argument list, so that type inference is not necessary.</span></span>  
+- <span data-ttu-id="0575f-112">Chiamare la routine generica con un elenco completo di argomenti di tipo in modo da non rendere necessaria l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="0575f-112">Call the generic procedure with a complete type argument list, so that type inference is not necessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aafa4-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aafa4-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0575f-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0575f-113">See also</span></span>
 
-- [<span data-ttu-id="aafa4-114">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="aafa4-114">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="aafa4-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="aafa4-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="aafa4-116">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="aafa4-116">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="aafa4-117">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="aafa4-117">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="0575f-114">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="0575f-114">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="0575f-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0575f-115">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="0575f-116">Type List</span><span class="sxs-lookup"><span data-stu-id="0575f-116">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="0575f-117">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0575f-117">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
