--- a/docs/visual-basic/misc/bc30086.md
+++ b/docs/visual-basic/misc/bc30086.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30086
 ms.assetid: 5e76b3c6-571f-4a6f-b524-26150cb6e986
-ms.openlocfilehash: 15dcda13f06060cd582f5b0837c06d5e8682e4b7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 826ed681dad8567fea635068bc1b64ce4d2e7b26
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935915"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380510"
 ---
-# <a name="else-must-be-preceded-by-a-matching-if-or-elseif"></a><span data-ttu-id="b6217-102">'Else' deve essere preceduto da 'If' o 'ElseIf' corrispondente</span><span class="sxs-lookup"><span data-stu-id="b6217-102">'Else' must be preceded by a matching 'If' or 'ElseIf'</span></span>
-<span data-ttu-id="b6217-103">Un'istruzione `Else` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="b6217-103">An `Else` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="b6217-104">`Else` deve essere preceduto da un'istruzione `If` .</span><span class="sxs-lookup"><span data-stu-id="b6217-104">`Else` must be preceded by an `If` statement.</span></span>  
+# <a name="else-must-be-preceded-by-a-matching-if-or-elseif"></a><span data-ttu-id="71836-102">'Else' deve essere preceduto da 'If' o 'ElseIf' corrispondente</span><span class="sxs-lookup"><span data-stu-id="71836-102">'Else' must be preceded by a matching 'If' or 'ElseIf'</span></span>
+<span data-ttu-id="71836-103">Un'istruzione `Else` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="71836-103">An `Else` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="71836-104">`Else` deve essere preceduto da un'istruzione `If` .</span><span class="sxs-lookup"><span data-stu-id="71836-104">`Else` must be preceded by an `If` statement.</span></span>  
   
- <span data-ttu-id="b6217-105">**ID errore:** BC30086</span><span class="sxs-lookup"><span data-stu-id="b6217-105">**Error ID:** BC30086</span></span>  
+ <span data-ttu-id="71836-105">**ID errore:** BC30086</span><span class="sxs-lookup"><span data-stu-id="71836-105">**Error ID:** BC30086</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b6217-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b6217-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="71836-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="71836-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="b6217-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="b6217-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="71836-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="71836-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="b6217-108">Verificare che le altre strutture di controllo all'interno del blocco `If` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="b6217-108">Verify that other control structures within the `If` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="71836-108">Verificare che le altre strutture di controllo all'interno del blocco `If` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="71836-108">Verify that other control structures within the `If` block are correctly terminated.</span></span>  
   
-3. <span data-ttu-id="b6217-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="b6217-109">Ensure that this `If` block is correctly formatted.</span></span>  
+3. <span data-ttu-id="71836-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="71836-109">Ensure that this `If` block is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b6217-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b6217-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="71836-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="71836-110">See also</span></span>
 
-- [<span data-ttu-id="b6217-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="b6217-111">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="71836-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="71836-111">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
