--- a/docs/visual-basic/misc/bc30103.md
+++ b/docs/visual-basic/misc/bc30103.md
@@ -1,5 +1,5 @@
 ---
-title: "'!' richiede la sua sinistra operando per avere un parametro di tipo, classe o tipo di interfaccia, ma questo operando ha il tipo '<type>'"
+title: "'!' richiede che l'operando sinistro abbia un parametro di tipo, una classe o un tipo di interfaccia, ma questo operando ha il tipo ' <type> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30103
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30103
 ms.assetid: 95982e5e-c3e5-402e-ad7b-4c5076a13869
-ms.openlocfilehash: 94f790f23153e3b79e8b2882f4ac7b6d41ea39b5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ca5cf8c1bd4b3c41495a58ff79ff2ef00072d6cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64627328"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380406"
 ---
-# <a name="-requires-its-left-operand-to-have-a-type-parameter-class-or-interface-type-but-this-operand-has-the-type-type"></a><span data-ttu-id="2e263-102">'!' richiede la sua sinistra operando per avere un parametro di tipo, classe o tipo di interfaccia, ma questo operando ha il tipo '\<tipo >'</span><span class="sxs-lookup"><span data-stu-id="2e263-102">'!' requires its left operand to have a type parameter, class or interface type, but this operand has the type '\<type>'</span></span>
-<span data-ttu-id="2e263-103">L'accesso ai membri dizionario, che usa un punto esclamativo (`!`) anziché un punto (`.`), è valido solo in una classe o in un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="2e263-103">Dictionary member access, which uses an exclamation point (`!`) instead of a period (`.`), is valid only on a class or an interface.</span></span>  
+# <a name="-requires-its-left-operand-to-have-a-type-parameter-class-or-interface-type-but-this-operand-has-the-type-type"></a><span data-ttu-id="482e9-102">'!' richiede che l'operando sinistro abbia un parametro di tipo, una classe o un tipo di interfaccia, ma questo operando ha il tipo ' \<type> '</span><span class="sxs-lookup"><span data-stu-id="482e9-102">'!' requires its left operand to have a type parameter, class or interface type, but this operand has the type '\<type>'</span></span>
+<span data-ttu-id="482e9-103">L'accesso ai membri dizionario, che usa un punto esclamativo (`!`) anziché un punto (`.`), è valido solo in una classe o in un'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="482e9-103">Dictionary member access, which uses an exclamation point (`!`) instead of a period (`.`), is valid only on a class or an interface.</span></span>  
   
- <span data-ttu-id="2e263-104">**ID errore:** BC30103</span><span class="sxs-lookup"><span data-stu-id="2e263-104">**Error ID:** BC30103</span></span>  
+ <span data-ttu-id="482e9-104">**ID errore:** BC30103</span><span class="sxs-lookup"><span data-stu-id="482e9-104">**Error ID:** BC30103</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2e263-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2e263-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="482e9-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="482e9-105">To correct this error</span></span>  
   
-- <span data-ttu-id="2e263-106">Sostituire l'espressione a sinistra del punto esclamativo con una che restituisce una classe definita o un tipo di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="2e263-106">Replace the expression on the left of the exclamation point with one that evaluates to a defined class or interface type.</span></span>  
+- <span data-ttu-id="482e9-106">Sostituire l'espressione a sinistra del punto esclamativo con una che restituisce una classe definita o un tipo di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="482e9-106">Replace the expression on the left of the exclamation point with one that evaluates to a defined class or interface type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2e263-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2e263-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="482e9-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="482e9-107">See also</span></span>
 
-- [<span data-ttu-id="2e263-108">Caratteri speciali nel codice</span><span class="sxs-lookup"><span data-stu-id="2e263-108">Special Characters in Code</span></span>](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
+- [<span data-ttu-id="482e9-108">Caratteri speciali nel codice</span><span class="sxs-lookup"><span data-stu-id="482e9-108">Special Characters in Code</span></span>](../programming-guide/program-structure/special-characters-in-code.md)
