--- a/docs/visual-basic/misc/bc30237.md
+++ b/docs/visual-basic/misc/bc30237.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro già dichiarato con il nome '<argumentname>'
+title: Il parametro è già dichiarato con il nome ' <argumentname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30237
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30237
 ms.assetid: 98b7c153-1df5-4e0e-8296-5855ced04813
-ms.openlocfilehash: b0283c543531239fa66cc4a7a5af18fe513723ca
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 915174a3aeb53def4e121ab36d58366df7feae15
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64639160"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379913"
 ---
-# <a name="parameter-already-declared-with-name-argumentname"></a><span data-ttu-id="602be-102">Parametro già dichiarato con il nome '\<NomeArgomento >'</span><span class="sxs-lookup"><span data-stu-id="602be-102">Parameter already declared with name '\<argumentname>'</span></span>
-<span data-ttu-id="602be-103">Una dichiarazione di routine definisce due argomenti con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="602be-103">A procedure declaration defines two arguments with the same name.</span></span> <span data-ttu-id="602be-104">Tutti i nomi di argomento in una dichiarazione di routine devono essere univoci.</span><span class="sxs-lookup"><span data-stu-id="602be-104">All argument names in a procedure declaration must be unique.</span></span>  
+# <a name="parameter-already-declared-with-name-argumentname"></a><span data-ttu-id="a615e-102">Il parametro è già dichiarato con il nome ' \<argumentname> '</span><span class="sxs-lookup"><span data-stu-id="a615e-102">Parameter already declared with name '\<argumentname>'</span></span>
+<span data-ttu-id="a615e-103">Una dichiarazione di routine definisce due argomenti con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="a615e-103">A procedure declaration defines two arguments with the same name.</span></span> <span data-ttu-id="a615e-104">Tutti i nomi di argomento in una dichiarazione di routine devono essere univoci.</span><span class="sxs-lookup"><span data-stu-id="a615e-104">All argument names in a procedure declaration must be unique.</span></span>  
   
- <span data-ttu-id="602be-105">**ID errore:** BC30237</span><span class="sxs-lookup"><span data-stu-id="602be-105">**Error ID:** BC30237</span></span>  
+ <span data-ttu-id="a615e-105">**ID errore:** BC30237</span><span class="sxs-lookup"><span data-stu-id="a615e-105">**Error ID:** BC30237</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="602be-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="602be-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a615e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a615e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="602be-107">Modificare il nome di uno degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="602be-107">Change the name of one of the arguments.</span></span>  
+- <span data-ttu-id="a615e-107">Modificare il nome di uno degli argomenti.</span><span class="sxs-lookup"><span data-stu-id="a615e-107">Change the name of one of the arguments.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="602be-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="602be-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a615e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a615e-108">See also</span></span>
 
-- [<span data-ttu-id="602be-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="602be-109">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="a615e-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="a615e-109">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
