--- a/docs/visual-basic/misc/bc30239.md
+++ b/docs/visual-basic/misc/bc30239.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30239
 ms.assetid: c5701568-77a1-441b-a0f7-f7b36cbd17e3
-ms.openlocfilehash: 75fbc065c3d89721e21c44924373a0e98c57219d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 40017e02fbe4e132e4021366d1e62c4e5098172c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625918"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379874"
 ---
-# <a name="relational-operator-expected"></a><span data-ttu-id="e64e8-102">È previsto l'operatore relazionale</span><span class="sxs-lookup"><span data-stu-id="e64e8-102">Relational operator expected</span></span>
-<span data-ttu-id="e64e8-103">Un'istruzione `Case` contiene una clausola `Is` ma nessun operatore di confronto, ad esempio `=` o `>`.</span><span class="sxs-lookup"><span data-stu-id="e64e8-103">A `Case` statement contains an `Is` clause but no comparison operator such as `=` or `>`.</span></span> <span data-ttu-id="e64e8-104">Se un'istruzione `Case` non include un operatore, si presuppone che sia `=` e non viene usato `Is` .</span><span class="sxs-lookup"><span data-stu-id="e64e8-104">If a `Case` statement does not include an operator, `=` is assumed and `Is` is not used.</span></span>  
+# <a name="relational-operator-expected"></a><span data-ttu-id="136f3-102">È previsto l'operatore relazionale</span><span class="sxs-lookup"><span data-stu-id="136f3-102">Relational operator expected</span></span>
+<span data-ttu-id="136f3-103">Un'istruzione `Case` contiene una clausola `Is` ma nessun operatore di confronto, ad esempio `=` o `>`.</span><span class="sxs-lookup"><span data-stu-id="136f3-103">A `Case` statement contains an `Is` clause but no comparison operator such as `=` or `>`.</span></span> <span data-ttu-id="136f3-104">Se un'istruzione `Case` non include un operatore, si presuppone che sia `=` e non viene usato `Is` .</span><span class="sxs-lookup"><span data-stu-id="136f3-104">If a `Case` statement does not include an operator, `=` is assumed and `Is` is not used.</span></span>  
   
- <span data-ttu-id="e64e8-105">**ID errore:** BC30239</span><span class="sxs-lookup"><span data-stu-id="e64e8-105">**Error ID:** BC30239</span></span>  
+ <span data-ttu-id="136f3-105">**ID errore:** BC30239</span><span class="sxs-lookup"><span data-stu-id="136f3-105">**Error ID:** BC30239</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e64e8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e64e8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="136f3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="136f3-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e64e8-107">Rimuovere la parola chiave `Is` oppure specificare dopo di essa un operatore di confronto.</span><span class="sxs-lookup"><span data-stu-id="e64e8-107">Remove the `Is` keyword or follow it with a comparison operator.</span></span>  
+- <span data-ttu-id="136f3-107">Rimuovere la parola chiave `Is` oppure specificare dopo di essa un operatore di confronto.</span><span class="sxs-lookup"><span data-stu-id="136f3-107">Remove the `Is` keyword or follow it with a comparison operator.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e64e8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e64e8-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="136f3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="136f3-108">See also</span></span>
 
-- [<span data-ttu-id="e64e8-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="e64e8-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
-- [<span data-ttu-id="e64e8-110">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e64e8-110">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [<span data-ttu-id="e64e8-111">Operatori di confronto</span><span class="sxs-lookup"><span data-stu-id="e64e8-111">Comparison Operators</span></span>](../../visual-basic/language-reference/operators/comparison-operators.md)
+- [<span data-ttu-id="136f3-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="136f3-109">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="136f3-110">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="136f3-110">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="136f3-111">Operatori di confronto</span><span class="sxs-lookup"><span data-stu-id="136f3-111">Comparison Operators</span></span>](../language-reference/operators/comparison-operators.md)
