--- a/docs/visual-basic/misc/bc32006.md
+++ b/docs/visual-basic/misc/bc32006.md
@@ -1,5 +1,5 @@
 ---
-title: I valori 'Char' non possono essere convertiti in '<typename>'
+title: Non è possibile convertire i valori ' Char ' in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32006
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32006
 ms.assetid: c033f65e-a315-47fc-be2e-ed371847a221
-ms.openlocfilehash: a58d2df1e5e44bf4ade6529d16937550d2eb94a0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 825193703e5a332f138a18f9b9b050fa4abf97d1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64661104"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379848"
 ---
-# <a name="char-values-cannot-be-converted-to-typename"></a><span data-ttu-id="365aa-102">I valori 'Char' non possono essere convertiti in '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="365aa-102">'Char' values cannot be converted to '\<typename>'</span></span>
-<span data-ttu-id="365aa-103">I valori 'Char' non possono essere convertiti in '\<nomeTipo >'.</span><span class="sxs-lookup"><span data-stu-id="365aa-103">'Char' values cannot be converted to '\<typename>'.</span></span> <span data-ttu-id="365aa-104">Usare 'Microsoft.VisualBasic.AscW' per interpretare un carattere come valore Unicode o 'Microsoft.VisualBasic.Val' per interpretarlo come cifra.</span><span class="sxs-lookup"><span data-stu-id="365aa-104">Use Microsoft.VisualBasic.AscW to interpret a character as a Unicode value or Microsoft.VisualBasic.Val to interpret it as a digit.</span></span>  
+# <a name="char-values-cannot-be-converted-to-typename"></a><span data-ttu-id="e3976-102">Non è possibile convertire i valori ' Char ' in ' \<typename> '</span><span class="sxs-lookup"><span data-stu-id="e3976-102">'Char' values cannot be converted to '\<typename>'</span></span>
+<span data-ttu-id="e3976-103">Non è possibile convertire i valori ' Char ' in ' \<typename> '.</span><span class="sxs-lookup"><span data-stu-id="e3976-103">'Char' values cannot be converted to '\<typename>'.</span></span> <span data-ttu-id="e3976-104">Usare 'Microsoft.VisualBasic.AscW' per interpretare un carattere come valore Unicode o 'Microsoft.VisualBasic.Val' per interpretarlo come cifra.</span><span class="sxs-lookup"><span data-stu-id="e3976-104">Use Microsoft.VisualBasic.AscW to interpret a character as a Unicode value or Microsoft.VisualBasic.Val to interpret it as a digit.</span></span>  
   
- <span data-ttu-id="365aa-105">Un'espressione tenta di convertire un valore `Char` in un tipo di dati diverso da `String` o `Object`.</span><span class="sxs-lookup"><span data-stu-id="365aa-105">An expression attempts to convert a `Char` value to a data type other than `String` or `Object`.</span></span>  
+ <span data-ttu-id="e3976-105">Un'espressione tenta di convertire un valore `Char` in un tipo di dati diverso da `String` o `Object`.</span><span class="sxs-lookup"><span data-stu-id="e3976-105">An expression attempts to convert a `Char` value to a data type other than `String` or `Object`.</span></span>  
   
- <span data-ttu-id="365aa-106">**ID errore:** BC32006</span><span class="sxs-lookup"><span data-stu-id="365aa-106">**Error ID:** BC32006</span></span>  
+ <span data-ttu-id="e3976-106">**ID errore:** BC32006</span><span class="sxs-lookup"><span data-stu-id="e3976-106">**Error ID:** BC32006</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="365aa-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="365aa-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e3976-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3976-107">To correct this error</span></span>  
   
-- <span data-ttu-id="365aa-108">Usare la funzione `AscW` per interpretare un valore `Char` come codice carattere Unicode oppure la funzione `Val` per interpretarlo come cifra numerica.</span><span class="sxs-lookup"><span data-stu-id="365aa-108">Use the `AscW` function to interpret a `Char` value as a Unicode character code, or the `Val` function to interpret it as a numeric digit.</span></span>  
+- <span data-ttu-id="e3976-108">Usare la funzione `AscW` per interpretare un valore `Char` come codice carattere Unicode oppure la funzione `Val` per interpretarlo come cifra numerica.</span><span class="sxs-lookup"><span data-stu-id="e3976-108">Use the `AscW` function to interpret a `Char` value as a Unicode character code, or the `Val` function to interpret it as a numeric digit.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="365aa-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="365aa-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e3976-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3976-109">See also</span></span>
 
-- [<span data-ttu-id="365aa-110">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="365aa-110">Char Data Type</span></span>](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [<span data-ttu-id="e3976-110">Tipo di dati Char</span><span class="sxs-lookup"><span data-stu-id="e3976-110">Char Data Type</span></span>](../language-reference/data-types/char-data-type.md)
