--- a/docs/visual-basic/misc/bc36007.md
+++ b/docs/visual-basic/misc/bc36007.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36007
 ms.assetid: 10fb31ba-9b6c-403f-bacc-c7b5df14f1dd
-ms.openlocfilehash: 1da71a9ff511b1ed6856db4872bad4e73518ba3a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 516304067059bbd92420c2a7ee41469548cb55a4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64631852"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379147"
 ---
-# <a name="end-using-must-be-preceded-by-a-matching-using"></a><span data-ttu-id="09f76-102">'End Using' deve essere preceduto da un 'Using' corrispondente</span><span class="sxs-lookup"><span data-stu-id="09f76-102">'End Using' must be preceded by a matching 'Using'</span></span>
-<span data-ttu-id="09f76-103">È presente un'istruzione `End Using` non preceduta da una dichiarazione `Using` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="09f76-103">An `End Using` statement appears with no matching `Using` declaration preceding it.</span></span>  
+# <a name="end-using-must-be-preceded-by-a-matching-using"></a><span data-ttu-id="c9e07-102">'End Using' deve essere preceduto da un 'Using' corrispondente</span><span class="sxs-lookup"><span data-stu-id="c9e07-102">'End Using' must be preceded by a matching 'Using'</span></span>
+<span data-ttu-id="c9e07-103">È presente un'istruzione `End Using` non preceduta da una dichiarazione `Using` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="c9e07-103">An `End Using` statement appears with no matching `Using` declaration preceding it.</span></span>  
   
- <span data-ttu-id="09f76-104">**ID errore:** BC36007</span><span class="sxs-lookup"><span data-stu-id="09f76-104">**Error ID:** BC36007</span></span>  
+ <span data-ttu-id="c9e07-104">**ID errore:** BC36007</span><span class="sxs-lookup"><span data-stu-id="c9e07-104">**Error ID:** BC36007</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="09f76-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="09f76-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c9e07-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c9e07-105">To correct this error</span></span>  
   
-- <span data-ttu-id="09f76-106">Rimuovere l'istruzione `End Using` se è ridondante.</span><span class="sxs-lookup"><span data-stu-id="09f76-106">Remove the `End Using` statement if it is redundant.</span></span>  
+- <span data-ttu-id="c9e07-106">Rimuovere l'istruzione `End Using` se è ridondante.</span><span class="sxs-lookup"><span data-stu-id="c9e07-106">Remove the `End Using` statement if it is redundant.</span></span>  
   
-- <span data-ttu-id="09f76-107">Fornire il mancante [istruzione Using](../../visual-basic/language-reference/statements/using-statement.md) se manca uno.</span><span class="sxs-lookup"><span data-stu-id="09f76-107">Supply the missing [Using Statement](../../visual-basic/language-reference/statements/using-statement.md) if one is missing.</span></span>  
+- <span data-ttu-id="c9e07-107">Specificare l' [istruzione using](../language-reference/statements/using-statement.md) mancante se non ne è presente una.</span><span class="sxs-lookup"><span data-stu-id="c9e07-107">Supply the missing [Using Statement](../language-reference/statements/using-statement.md) if one is missing.</span></span>  
   
-- <span data-ttu-id="09f76-108">Spostare l'istruzione `End Using` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="09f76-108">Move the `End Using` statement to the appropriate place in the code.</span></span>  
+- <span data-ttu-id="c9e07-108">Spostare l'istruzione `End Using` nella posizione appropriata nel codice.</span><span class="sxs-lookup"><span data-stu-id="c9e07-108">Move the `End Using` statement to the appropriate place in the code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="09f76-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="09f76-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c9e07-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c9e07-109">See also</span></span>
 
-- [<span data-ttu-id="09f76-110">Fine \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="09f76-110">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [<span data-ttu-id="c9e07-110">\<keyword>Istruzione End</span><span class="sxs-lookup"><span data-stu-id="c9e07-110">End \<keyword> Statement</span></span>](../language-reference/statements/end-keyword-statement.md)
