--- a/docs/visual-basic/misc/bc36011.md
+++ b/docs/visual-basic/misc/bc36011.md
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - BC36011
 ms.assetid: 5db996a6-0802-4b67-91f1-4aa9c3dd6b09
-ms.openlocfilehash: b6688243667fc708c7e5a7915ebefdef39532ba4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 17bc09cdc8dd6ced106652b15a1b4c7b986c41e5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633793"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378965"
 ---
-# <a name="using-resource-variable-must-have-an-explicit-initialization"></a><span data-ttu-id="97140-102">La variabile di risorsa 'Using' deve avere un'inizializzazione esplicita</span><span class="sxs-lookup"><span data-stu-id="97140-102">'Using' resource variable must have an explicit initialization</span></span>
-<span data-ttu-id="97140-103">Un'istruzione `Using` specifica almeno una risorsa che non viene inizializzata con la clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="97140-103">A `Using` statement specifies at least one resource that it does not initialize with a `New` clause.</span></span>  
+# <a name="using-resource-variable-must-have-an-explicit-initialization"></a><span data-ttu-id="6f47d-102">La variabile di risorsa 'Using' deve avere un'inizializzazione esplicita</span><span class="sxs-lookup"><span data-stu-id="6f47d-102">'Using' resource variable must have an explicit initialization</span></span>
+<span data-ttu-id="6f47d-103">Un'istruzione `Using` specifica almeno una risorsa che non viene inizializzata con la clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="6f47d-103">A `Using` statement specifies at least one resource that it does not initialize with a `New` clause.</span></span>  
   
- <span data-ttu-id="97140-104">Se la risorsa non è ancora stata acquisita prima di passare il controllo al blocco `Using` , deve essere acquisita mediante l'istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="97140-104">If you have not already acquired the resource before passing control to the `Using` block, the `Using` statement must acquire the resource.</span></span> <span data-ttu-id="97140-105">A questo scopo è necessario creare un oggetto dalla classe specificata, il che richiede una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="97140-105">To do this, it must create an object from the specified class, which requires a `New` clause.</span></span>  
+ <span data-ttu-id="6f47d-104">Se la risorsa non è ancora stata acquisita prima di passare il controllo al blocco `Using` , deve essere acquisita mediante l'istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="6f47d-104">If you have not already acquired the resource before passing control to the `Using` block, the `Using` statement must acquire the resource.</span></span> <span data-ttu-id="6f47d-105">A questo scopo è necessario creare un oggetto dalla classe specificata, il che richiede una clausola `New` .</span><span class="sxs-lookup"><span data-stu-id="6f47d-105">To do this, it must create an object from the specified class, which requires a `New` clause.</span></span>  
   
- <span data-ttu-id="97140-106">**ID errore:** BC36011</span><span class="sxs-lookup"><span data-stu-id="97140-106">**Error ID:** BC36011</span></span>  
+ <span data-ttu-id="6f47d-106">**ID errore:** BC36011</span><span class="sxs-lookup"><span data-stu-id="6f47d-106">**Error ID:** BC36011</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="97140-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97140-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6f47d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6f47d-107">To correct this error</span></span>  
   
-- <span data-ttu-id="97140-108">Se la risorsa è già stata acquisita, usare una variabile di riferimento o un'espressione nell'istruzione `Using` che restituisce la risorsa acquisita.</span><span class="sxs-lookup"><span data-stu-id="97140-108">If you have already acquired the resource, use a reference variable or expression in the `Using` statement that evaluates to the acquired resource.</span></span>  
+- <span data-ttu-id="6f47d-108">Se la risorsa è già stata acquisita, usare una variabile di riferimento o un'espressione nell'istruzione `Using` che restituisce la risorsa acquisita.</span><span class="sxs-lookup"><span data-stu-id="6f47d-108">If you have already acquired the resource, use a reference variable or expression in the `Using` statement that evaluates to the acquired resource.</span></span>  
   
      `Dim newFont As New System.Drawing.Font`  
   
      `Using newFont`  
   
-- <span data-ttu-id="97140-109">Se la risorsa non è ancora stata acquisita, aggiungere una clausola `New` all'istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="97140-109">If you have not already acquired the resource, add a `New` clause to the `Using` statement.</span></span>  
+- <span data-ttu-id="6f47d-109">Se la risorsa non è ancora stata acquisita, aggiungere una clausola `New` all'istruzione `Using` .</span><span class="sxs-lookup"><span data-stu-id="6f47d-109">If you have not already acquired the resource, add a `New` clause to the `Using` statement.</span></span>  
   
-     <span data-ttu-id="97140-110">`Using newFont as`   `New`   `System.Drawing.Font`</span><span class="sxs-lookup"><span data-stu-id="97140-110">`Using newFont as`   `New`   `System.Drawing.Font`</span></span>  
+     <span data-ttu-id="6f47d-110">`Using newFont as`   `New`   `System.Drawing.Font`</span><span class="sxs-lookup"><span data-stu-id="6f47d-110">`Using newFont as`   `New`   `System.Drawing.Font`</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="97140-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97140-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6f47d-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6f47d-111">See also</span></span>
 
-- [<span data-ttu-id="97140-112">Istruzione Using</span><span class="sxs-lookup"><span data-stu-id="97140-112">Using Statement</span></span>](../../visual-basic/language-reference/statements/using-statement.md)
-- [<span data-ttu-id="97140-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="97140-113">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
-- [<span data-ttu-id="97140-114">Procedura: Eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="97140-114">How to: Dispose of a System Resource</span></span>](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [<span data-ttu-id="6f47d-112">Istruzione using</span><span class="sxs-lookup"><span data-stu-id="6f47d-112">Using Statement</span></span>](../language-reference/statements/using-statement.md)
+- [<span data-ttu-id="6f47d-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="6f47d-113">New Operator</span></span>](../language-reference/operators/new-operator.md)
+- [<span data-ttu-id="6f47d-114">Procedura: eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="6f47d-114">How to: Dispose of a System Resource</span></span>](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
