--- a/docs/visual-basic/misc/bc36013.md
+++ b/docs/visual-basic/misc/bc36013.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36013
 ms.assetid: 5b399bf9-6595-46e0-a808-378f6c28568b
-ms.openlocfilehash: 5810ed72cd41411260be34993728af96fedcd8f8
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 70e03a298bfe4d3898a5f8bb571735f6f73886f8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633529"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378802"
 ---
-# <a name="on-error-statements-are-not-valid-within-using-statements"></a><span data-ttu-id="4322b-102">Le istruzioni 'On Error' non sono valide all'interno di istruzioni 'Using'</span><span class="sxs-lookup"><span data-stu-id="4322b-102">'On Error' statements are not valid within 'Using' statements</span></span>
-<span data-ttu-id="4322b-103">Un'istruzione `On Error` viene visualizzata all'interno di un'istruzione `Using` ma non è valida in tale contesto.</span><span class="sxs-lookup"><span data-stu-id="4322b-103">An `On Error` statement appears within a `Using` statement but is not valid in that context.</span></span>  
+# <a name="on-error-statements-are-not-valid-within-using-statements"></a><span data-ttu-id="3ad4e-102">Le istruzioni 'On Error' non sono valide all'interno di istruzioni 'Using'</span><span class="sxs-lookup"><span data-stu-id="3ad4e-102">'On Error' statements are not valid within 'Using' statements</span></span>
+<span data-ttu-id="3ad4e-103">Un'istruzione `On Error` viene visualizzata all'interno di un'istruzione `Using` ma non è valida in tale contesto.</span><span class="sxs-lookup"><span data-stu-id="3ad4e-103">An `On Error` statement appears within a `Using` statement but is not valid in that context.</span></span>  
   
- <span data-ttu-id="4322b-104">**ID errore:** BC36013</span><span class="sxs-lookup"><span data-stu-id="4322b-104">**Error ID:** BC36013</span></span>  
+ <span data-ttu-id="3ad4e-104">**ID errore:** BC36013</span><span class="sxs-lookup"><span data-stu-id="3ad4e-104">**Error ID:** BC36013</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4322b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4322b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3ad4e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3ad4e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4322b-106">Usare una gestione degli errori strutturata, ad esempio un blocco `Try…Catch` , invece dell'istruzione `On Error` .</span><span class="sxs-lookup"><span data-stu-id="4322b-106">Use structured error handling, such as a `Try…Catch` block, in place of the `On Error` statement.</span></span>  
+- <span data-ttu-id="3ad4e-106">Usare una gestione degli errori strutturata, ad esempio un blocco `Try…Catch` , invece dell'istruzione `On Error` .</span><span class="sxs-lookup"><span data-stu-id="3ad4e-106">Use structured error handling, such as a `Try…Catch` block, in place of the `On Error` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4322b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4322b-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3ad4e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3ad4e-107">See also</span></span>
 
-- [<span data-ttu-id="4322b-108">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="4322b-108">On Error Statement</span></span>](../../visual-basic/language-reference/statements/on-error-statement.md)
-- [<span data-ttu-id="4322b-109">Come usare il blocco try/catch per intercettare le eccezioni</span><span class="sxs-lookup"><span data-stu-id="4322b-109">How to use the try/catch block to catch exceptions</span></span>](../../standard/exceptions/how-to-use-the-try-catch-block-to-catch-exceptions.md)
-- [<span data-ttu-id="4322b-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="4322b-110">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="3ad4e-108">Istruzione On Error</span><span class="sxs-lookup"><span data-stu-id="3ad4e-108">On Error Statement</span></span>](../language-reference/statements/on-error-statement.md)
+- [<span data-ttu-id="3ad4e-109">Come usare il blocco try/catch per rilevare le eccezioni</span><span class="sxs-lookup"><span data-stu-id="3ad4e-109">How to use the try/catch block to catch exceptions</span></span>](../../standard/exceptions/how-to-use-the-try-catch-block-to-catch-exceptions.md)
+- [<span data-ttu-id="3ad4e-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="3ad4e-110">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
