--- a/docs/visual-basic/misc/bc36554.md
+++ b/docs/visual-basic/misc/bc36554.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36554
 ms.assetid: 0778a854-246f-4c2b-943d-ea8883b3aa6f
-ms.openlocfilehash: d35662ce62b3f501a3699570084231f87bad2d79
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 2b78855c52afb3cfe9c16a2b05c78e7d7524825c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512990"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378445"
 ---
-# <a name="paramarray-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a><span data-ttu-id="70d66-102">Impossibile applicare 'ParamArray' al primo parametro di un metodo di estensione</span><span class="sxs-lookup"><span data-stu-id="70d66-102">'ParamArray' cannot be applied to the first parameter of an extension method</span></span>
+# <a name="paramarray-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a><span data-ttu-id="79a2a-102">Impossibile applicare 'ParamArray' al primo parametro di un metodo di estensione</span><span class="sxs-lookup"><span data-stu-id="79a2a-102">'ParamArray' cannot be applied to the first parameter of an extension method</span></span>
 
-<span data-ttu-id="70d66-103">Impossibile applicare 'ParamArray' al primo parametro di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="70d66-103">'ParamArray' cannot be applied to the first parameter of an extension method.</span></span> <span data-ttu-id="70d66-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="70d66-104">The first parameter specifies which type to extend.</span></span>
+<span data-ttu-id="79a2a-103">Impossibile applicare 'ParamArray' al primo parametro di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="79a2a-103">'ParamArray' cannot be applied to the first parameter of an extension method.</span></span> <span data-ttu-id="79a2a-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="79a2a-104">The first parameter specifies which type to extend.</span></span>
 
-<span data-ttu-id="70d66-105">Il primo parametro di un metodo di estensione specifica il tipo di dati che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="70d66-105">The first parameter of an extension method specifies the data type that the method extends.</span></span> <span data-ttu-id="70d66-106">Di conseguenza, il primo parametro è obbligatorio e non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="70d66-106">Therefore, the first parameter is required and cannot be optional.</span></span> <span data-ttu-id="70d66-107">Dal momento che una matrice di parametri è automaticamente facoltativa, non è valida come primo argomento di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="70d66-107">Because a parameter array is automatically optional, it is not valid as the first argument of an extension method.</span></span>
+<span data-ttu-id="79a2a-105">Il primo parametro di un metodo di estensione specifica il tipo di dati che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="79a2a-105">The first parameter of an extension method specifies the data type that the method extends.</span></span> <span data-ttu-id="79a2a-106">Di conseguenza, il primo parametro è obbligatorio e non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="79a2a-106">Therefore, the first parameter is required and cannot be optional.</span></span> <span data-ttu-id="79a2a-107">Dal momento che una matrice di parametri è automaticamente facoltativa, non è valida come primo argomento di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="79a2a-107">Because a parameter array is automatically optional, it is not valid as the first argument of an extension method.</span></span>
 
 > [!NOTE]
-> <span data-ttu-id="70d66-108">Quando viene eseguito il metodo, l'istanza del tipo di dati estesi che richiama il metodo diventa l'argomento per il primo parametro del metodo.</span><span class="sxs-lookup"><span data-stu-id="70d66-108">When the method is executed, the instance of the extended data type that invokes the method becomes the argument for the first parameter of the method.</span></span> <span data-ttu-id="70d66-109">Ad esempio, l'istanza `greeting` in `greeting.Print()` è l'argomento per il primo parametro, `str`, nel metodo di estensione `Public Sub Print (ByVal str As String)`.</span><span class="sxs-lookup"><span data-stu-id="70d66-109">For example, the instance `greeting` in `greeting.Print()` is the argument for the first parameter, `str`, in extension method `Public Sub Print (ByVal str As String)`.</span></span>
+> <span data-ttu-id="79a2a-108">Quando viene eseguito il metodo, l'istanza del tipo di dati estesi che richiama il metodo diventa l'argomento per il primo parametro del metodo.</span><span class="sxs-lookup"><span data-stu-id="79a2a-108">When the method is executed, the instance of the extended data type that invokes the method becomes the argument for the first parameter of the method.</span></span> <span data-ttu-id="79a2a-109">Ad esempio, l'istanza `greeting` in `greeting.Print()` è l'argomento per il primo parametro, `str`, nel metodo di estensione `Public Sub Print (ByVal str As String)`.</span><span class="sxs-lookup"><span data-stu-id="79a2a-109">For example, the instance `greeting` in `greeting.Print()` is the argument for the first parameter, `str`, in extension method `Public Sub Print (ByVal str As String)`.</span></span>
 
-<span data-ttu-id="70d66-110">**ID errore:** BC36554</span><span class="sxs-lookup"><span data-stu-id="70d66-110">**Error ID:** BC36554</span></span>
+<span data-ttu-id="79a2a-110">**ID errore:** BC36554</span><span class="sxs-lookup"><span data-stu-id="79a2a-110">**Error ID:** BC36554</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="70d66-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="70d66-111">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="79a2a-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="79a2a-111">To correct this error</span></span>
 
-- <span data-ttu-id="70d66-112">Se la matrice di parametri non specifica il tipo di dati che si vuole estendere, aggiungere un nuovo primo parametro che specifichi il tipo.</span><span class="sxs-lookup"><span data-stu-id="70d66-112">If the parameter array does not specify the data type you want to extend, add a new first parameter that specifies this type.</span></span>
+- <span data-ttu-id="79a2a-112">Se la matrice di parametri non specifica il tipo di dati che si vuole estendere, aggiungere un nuovo primo parametro che specifichi il tipo.</span><span class="sxs-lookup"><span data-stu-id="79a2a-112">If the parameter array does not specify the data type you want to extend, add a new first parameter that specifies this type.</span></span>
 
   ```vb
   <Extension()>
@@ -36,7 +36,7 @@ ms.locfileid: "68512990"
   End Sub
   ```
 
-- <span data-ttu-id="70d66-113">Se la matrice di parametri specifica il tipo di dati che si vuole estendere, modificarla in una matrice standard, che richiede un argomento, anziché una matrice di parametri.</span><span class="sxs-lookup"><span data-stu-id="70d66-113">If the parameter array does specify the data type you want to extend, consider changing it to a regular array, requiring an argument, instead of a parameter array.</span></span> <span data-ttu-id="70d66-114">Le matrici normali possono essere estese.</span><span class="sxs-lookup"><span data-stu-id="70d66-114">Regular arrays can be extended.</span></span>
+- <span data-ttu-id="79a2a-113">Se la matrice di parametri specifica il tipo di dati che si vuole estendere, modificarla in una matrice standard, che richiede un argomento, anziché una matrice di parametri.</span><span class="sxs-lookup"><span data-stu-id="79a2a-113">If the parameter array does specify the data type you want to extend, consider changing it to a regular array, requiring an argument, instead of a parameter array.</span></span> <span data-ttu-id="79a2a-114">Le matrici normali possono essere estese.</span><span class="sxs-lookup"><span data-stu-id="79a2a-114">Regular arrays can be extended.</span></span>
 
   ```vb
   <Extension()>
@@ -49,8 +49,8 @@ ms.locfileid: "68512990"
   End Function
   ```
 
-## <a name="see-also"></a><span data-ttu-id="70d66-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="70d66-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="79a2a-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="79a2a-115">See also</span></span>
 
-- [<span data-ttu-id="70d66-116">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="70d66-116">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="70d66-117">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="70d66-117">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [<span data-ttu-id="70d66-118">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="70d66-118">Optional Parameters</span></span>](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
+- [<span data-ttu-id="79a2a-116">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="79a2a-116">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="79a2a-117">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="79a2a-117">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="79a2a-118">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="79a2a-118">Optional Parameters</span></span>](../programming-guide/language-features/procedures/optional-parameters.md)
