--- a/docs/visual-basic/misc/bc36572.md
+++ b/docs/visual-basic/misc/bc36572.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo '<typeparametername>' non può essere dedotto
+title: Non è possibile dedurre il parametro di tipo '<typeparametername>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc36572
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC36572
 ms.assetid: 02264070-b055-4ab0-8d2a-eac4d90d9fdf
-ms.openlocfilehash: 199fc71b244e82be258b9fc41dfbfb191a2371fe
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 30f8e56da50251a6c142f1f51c2b45da989670ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913146"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377925"
 ---
-# <a name="type-parameter-typeparametername-cannot-be-inferred"></a><span data-ttu-id="15e80-102">Parametro di tipo '\<nomeparametrotipo >' non può essere dedotto</span><span class="sxs-lookup"><span data-stu-id="15e80-102">Type parameter '\<typeparametername>' cannot be inferred</span></span>
-<span data-ttu-id="15e80-103">È stata chiamata una routine generica senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non riesce per uno degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="15e80-103">A generic procedure is called without supplying a type argument list, and type inference fails for one of the type arguments.</span></span>  
+# <a name="type-parameter-typeparametername-cannot-be-inferred"></a><span data-ttu-id="a3703-102">Non è possibile dedurre il parametro di tipo '\<typeparametername>'</span><span class="sxs-lookup"><span data-stu-id="a3703-102">Type parameter '\<typeparametername>' cannot be inferred</span></span>
+<span data-ttu-id="a3703-103">È stata chiamata una routine generica senza fornire un elenco di argomenti di tipo e l'inferenza del tipo non riesce per uno degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="a3703-103">A generic procedure is called without supplying a type argument list, and type inference fails for one of the type arguments.</span></span>  
   
- <span data-ttu-id="15e80-104">Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="15e80-104">When you call a generic procedure, you normally supply a type argument for each type parameter defined by the procedure.</span></span> <span data-ttu-id="15e80-105">È però possibile omettere completamente l'elenco degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="15e80-105">However, you have the alternative of omitting the type argument list entirely.</span></span> <span data-ttu-id="15e80-106">In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata.</span><span class="sxs-lookup"><span data-stu-id="15e80-106">When you do this, the compiler attempts to infer the type of each type argument from the context of your call.</span></span> <span data-ttu-id="15e80-107">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="15e80-107">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
+ <span data-ttu-id="a3703-104">Di norma, quando si chiama una routine generica, si fornisce un argomento di tipo per ogni parametro di tipo definito dalla routine.</span><span class="sxs-lookup"><span data-stu-id="a3703-104">When you call a generic procedure, you normally supply a type argument for each type parameter defined by the procedure.</span></span> <span data-ttu-id="a3703-105">È però possibile omettere completamente l'elenco degli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="a3703-105">However, you have the alternative of omitting the type argument list entirely.</span></span> <span data-ttu-id="a3703-106">In questo caso, il compilatore prova a dedurre il tipo di ogni argomento di tipo dal contesto della chiamata.</span><span class="sxs-lookup"><span data-stu-id="a3703-106">When you do this, the compiler attempts to infer the type of each type argument from the context of your call.</span></span> <span data-ttu-id="a3703-107">Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="a3703-107">For more information, see "Type Inference" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).</span></span>  
   
- <span data-ttu-id="15e80-108">**ID errore:** BC36572</span><span class="sxs-lookup"><span data-stu-id="15e80-108">**Error ID:** BC36572</span></span>  
+ <span data-ttu-id="a3703-108">**ID errore:** BC36572</span><span class="sxs-lookup"><span data-stu-id="a3703-108">**Error ID:** BC36572</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="15e80-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="15e80-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a3703-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a3703-109">To correct this error</span></span>  
   
-- <span data-ttu-id="15e80-110">Verificare che i tipi degli argomenti normali siano tali che l'inferenza del tipo sia coerente con i parametri di tipo dichiarati per la routine generica.</span><span class="sxs-lookup"><span data-stu-id="15e80-110">Make sure the types of the normal arguments are such that type inference is consistent with the type parameters declared for the generic procedure.</span></span>  
+- <span data-ttu-id="a3703-110">Verificare che i tipi degli argomenti normali siano tali che l'inferenza del tipo sia coerente con i parametri di tipo dichiarati per la routine generica.</span><span class="sxs-lookup"><span data-stu-id="a3703-110">Make sure the types of the normal arguments are such that type inference is consistent with the type parameters declared for the generic procedure.</span></span>  
   
-     <span data-ttu-id="15e80-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="15e80-111">-or-</span></span>  
+     <span data-ttu-id="a3703-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="a3703-111">-or-</span></span>  
   
-- <span data-ttu-id="15e80-112">Chiamare la routine generica con un elenco completo di argomenti di tipo in modo da non rendere necessaria l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="15e80-112">Call the generic procedure with a complete type argument list, so that type inference is not necessary.</span></span>  
+- <span data-ttu-id="a3703-112">Chiamare la routine generica con un elenco completo di argomenti di tipo in modo da non rendere necessaria l'inferenza del tipo.</span><span class="sxs-lookup"><span data-stu-id="a3703-112">Call the generic procedure with a complete type argument list, so that type inference is not necessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="15e80-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="15e80-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a3703-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a3703-113">See also</span></span>
 
-- [<span data-ttu-id="15e80-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="15e80-114">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="15e80-115">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="15e80-115">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="15e80-116">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="15e80-116">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="a3703-114">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a3703-114">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="a3703-115">Type List</span><span class="sxs-lookup"><span data-stu-id="a3703-115">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="a3703-116">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a3703-116">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
