--- a/docs/visual-basic/misc/bc36574.md
+++ b/docs/visual-basic/misc/bc36574.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC36574
 ms.assetid: fdc8dd47-ea38-49e8-8dd5-676f726cd101
-ms.openlocfilehash: 71079f5c289d4493975c7de7d5791c09783d4642
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 4a5dd4768329b1e2560ca4e902ab5f900d5d72fe
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353492"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377899"
 ---
-# <a name="anonymous-type-must-contain-at-least-one-member"></a><span data-ttu-id="23b8a-102">Il tipo anonimo deve contenere almeno un membro</span><span class="sxs-lookup"><span data-stu-id="23b8a-102">Anonymous type must contain at least one member</span></span>
-<span data-ttu-id="23b8a-103">L'elenco di inizializzatori in una dichiarazione di tipo anonimo non può essere vuoto.</span><span class="sxs-lookup"><span data-stu-id="23b8a-103">The initializer list in an anonymous type declaration cannot be empty.</span></span>  
+# <a name="anonymous-type-must-contain-at-least-one-member"></a><span data-ttu-id="fb46f-102">Il tipo anonimo deve contenere almeno un membro</span><span class="sxs-lookup"><span data-stu-id="fb46f-102">Anonymous type must contain at least one member</span></span>
+<span data-ttu-id="fb46f-103">L'elenco di inizializzatori in una dichiarazione di tipo anonimo non può essere vuoto.</span><span class="sxs-lookup"><span data-stu-id="fb46f-103">The initializer list in an anonymous type declaration cannot be empty.</span></span>  
   
 ```vb  
 ' Not valid.  
 ' Dim anonInstance = New With {}  
 ```  
   
- <span data-ttu-id="23b8a-104">**ID errore:** BC36574</span><span class="sxs-lookup"><span data-stu-id="23b8a-104">**Error ID:** BC36574</span></span>  
+ <span data-ttu-id="fb46f-104">**ID errore:** BC36574</span><span class="sxs-lookup"><span data-stu-id="fb46f-104">**Error ID:** BC36574</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="23b8a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="23b8a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fb46f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fb46f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="23b8a-106">Dichiarare un membro all'interno delle parentesi graffe, come illustrato nel codice seguente.</span><span class="sxs-lookup"><span data-stu-id="23b8a-106">Declare a member within the braces, as shown in the following code.</span></span>  
+- <span data-ttu-id="fb46f-106">Dichiarare un membro all'interno delle parentesi graffe, come illustrato nel codice seguente.</span><span class="sxs-lookup"><span data-stu-id="fb46f-106">Declare a member within the braces, as shown in the following code.</span></span>  
   
     ```vb  
     Dim anonInstance = New With {.MemberName = "value"}  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="23b8a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="23b8a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fb46f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fb46f-107">See also</span></span>
 
-- [<span data-ttu-id="23b8a-108">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="23b8a-108">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="fb46f-108">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="fb46f-108">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
