--- a/docs/visual-basic/misc/bc36577.md
+++ b/docs/visual-basic/misc/bc36577.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36577
 ms.assetid: c16c5f56-fd41-4058-9d43-35e5c0f7bf03
-ms.openlocfilehash: d1a224bf06566295f887dba8a7080b0ef9c5ccb4
-ms.sourcegitcommit: 14ad34f7c4564ee0f009acb8bfc0ea7af3bc9541
+ms.openlocfilehash: 073901ad7da0fc882c661b9af20aed23bb8bb2a7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/01/2019
-ms.locfileid: "73424959"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377717"
 ---
-# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="8f407-102">Inizializzatori di tipo anonimo non validi nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="8f407-102">Anonymous type initializers are not valid in debug windows</span></span>
-<span data-ttu-id="8f407-103">Un inizializzatore di tipo anonimo è stato immesso nella finestra **Espressioni di controllo** o nella finestra di **controllo immediato** durante una sessione di debug.</span><span class="sxs-lookup"><span data-stu-id="8f407-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="8f407-104">Inizializzatori di tipo anonimo non disponibili nelle finestre di debug.</span><span class="sxs-lookup"><span data-stu-id="8f407-104">Anonymous type initializers are not available in debugging windows.</span></span>  
+# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="a90e5-102">Inizializzatori di tipo anonimo non validi nelle finestre di debug</span><span class="sxs-lookup"><span data-stu-id="a90e5-102">Anonymous type initializers are not valid in debug windows</span></span>
+<span data-ttu-id="a90e5-103">Un inizializzatore di tipo anonimo è stato immesso nella finestra **Espressioni di controllo** o nella finestra di **controllo immediato** durante una sessione di debug.</span><span class="sxs-lookup"><span data-stu-id="a90e5-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="a90e5-104">Inizializzatori di tipo anonimo non disponibili nelle finestre di debug.</span><span class="sxs-lookup"><span data-stu-id="a90e5-104">Anonymous type initializers are not available in debugging windows.</span></span>  
   
- <span data-ttu-id="8f407-105">**ID errore:** BC36577</span><span class="sxs-lookup"><span data-stu-id="8f407-105">**Error ID:** BC36577</span></span>  
+ <span data-ttu-id="a90e5-105">**ID errore:** BC36577</span><span class="sxs-lookup"><span data-stu-id="a90e5-105">**Error ID:** BC36577</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8f407-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8f407-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a90e5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a90e5-106">To correct this error</span></span>  
   
-- <span data-ttu-id="8f407-107">Testare gli inizializzatori di tipo anonimo nell'Editor di codice.</span><span class="sxs-lookup"><span data-stu-id="8f407-107">Test anonymous type initializers in the Code Editor.</span></span>  
+- <span data-ttu-id="a90e5-107">Testare gli inizializzatori di tipo anonimo nell'Editor di codice.</span><span class="sxs-lookup"><span data-stu-id="a90e5-107">Test anonymous type initializers in the Code Editor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8f407-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8f407-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a90e5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a90e5-108">See also</span></span>
 
-- [<span data-ttu-id="8f407-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="8f407-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="8f407-110">Finestra di controllo immediato-Visual Studio</span><span class="sxs-lookup"><span data-stu-id="8f407-110">Immediate Window - Visual Studio</span></span>](/visualstudio/ide/reference/immediate-window)
-- [<span data-ttu-id="8f407-111">Debug dell'applicazione Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8f407-111">Debugging Your Visual Basic Application</span></span>](/visualstudio/debugger/debugger-basics)
+- [<span data-ttu-id="a90e5-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="a90e5-109">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="a90e5-110">Finestra di controllo immediato-Visual Studio</span><span class="sxs-lookup"><span data-stu-id="a90e5-110">Immediate Window - Visual Studio</span></span>](/visualstudio/ide/reference/immediate-window)
+- [<span data-ttu-id="a90e5-111">Debug dell'applicazione Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a90e5-111">Debugging Your Visual Basic Application</span></span>](/visualstudio/debugger/debugger-basics)
