--- a/docs/visual-basic/misc/bc36578.md
+++ b/docs/visual-basic/misc/bc36578.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36578
 ms.assetid: 881b3009-0c9e-4676-b172-c6aabd14ed14
-ms.openlocfilehash: 3491704a22076883afec8c61911af0fcb9dff4cd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 194bffc4ada0c0be984cc0125008e898dd4d18ea
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623493"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377678"
 ---
-# <a name="too-few-type-arguments"></a><span data-ttu-id="06304-102">Argomenti di tipo insufficienti</span><span class="sxs-lookup"><span data-stu-id="06304-102">Too few type arguments</span></span>
-<span data-ttu-id="06304-103">È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="06304-103">A generic method has been invoked with fewer type arguments than there are type parameters.</span></span>  
+# <a name="too-few-type-arguments"></a><span data-ttu-id="5be8a-102">Argomenti di tipo insufficienti</span><span class="sxs-lookup"><span data-stu-id="5be8a-102">Too few type arguments</span></span>
+<span data-ttu-id="5be8a-103">È stato richiamato un metodo generico con meno argomenti di tipo rispetto ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="5be8a-103">A generic method has been invoked with fewer type arguments than there are type parameters.</span></span>  
   
- <span data-ttu-id="06304-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="06304-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
+ <span data-ttu-id="5be8a-104">Quando si richiama un metodo generico, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="5be8a-104">When you invoke a generic method, you must supply one type argument for each type parameter defined by that method.</span></span>  
   
- <span data-ttu-id="06304-105">**ID errore:** BC36578</span><span class="sxs-lookup"><span data-stu-id="06304-105">**Error ID:** BC36578</span></span>  
+ <span data-ttu-id="5be8a-105">**ID errore:** BC36578</span><span class="sxs-lookup"><span data-stu-id="5be8a-105">**Error ID:** BC36578</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="06304-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="06304-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5be8a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5be8a-106">To correct this error</span></span>  
   
-- <span data-ttu-id="06304-107">Aggiungere gli argomenti di tipo all'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo del metodo generico che si sta chiamando.</span><span class="sxs-lookup"><span data-stu-id="06304-107">Add type arguments to your type argument list so that there is one for each type parameter of the generic method that you are invoking.</span></span>  
+- <span data-ttu-id="5be8a-107">Aggiungere gli argomenti di tipo all'elenco di argomenti di tipo in modo che ne esista uno per ogni parametro di tipo del metodo generico che si sta chiamando.</span><span class="sxs-lookup"><span data-stu-id="5be8a-107">Add type arguments to your type argument list so that there is one for each type parameter of the generic method that you are invoking.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="06304-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="06304-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5be8a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5be8a-108">See also</span></span>
 
-- [<span data-ttu-id="06304-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="06304-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="06304-110">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="06304-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="06304-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="06304-111">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="5be8a-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5be8a-109">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="5be8a-110">Type List</span><span class="sxs-lookup"><span data-stu-id="5be8a-110">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="5be8a-111">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="5be8a-111">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
