--- a/docs/visual-basic/misc/bc36581.md
+++ b/docs/visual-basic/misc/bc36581.md
@@ -1,5 +1,5 @@
 ---
-title: Gli argomenti del metodo di estensione di tipo '<methodName>'definito '<typeName>'non è possibile dedurre dal delegato'<delegateName>'
+title: <methodName>Non è stato possibile dedurre gli argomenti di tipo per il metodo di estensione '' definito in ' <typeName> ' dal delegato ' <delegateName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36581
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC36581
 ms.assetid: 2bb9ca8d-7293-40e9-9285-e20b8254b3af
-ms.openlocfilehash: 05f40b45b454a0013bbbb11e9676b19c0583a17d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e545f3087094a716ea332211b80d438620dee7ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970781"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377535"
 ---
-# <a name="type-arguments-for-extension-method-methodname-defined-in-typename-could-not-be-inferred-from-the-delegate-delegatename"></a><span data-ttu-id="b5905-102">Gli argomenti del metodo di estensione di tipo '\<NomeMetodo >' definito in '\<nomeTipo >' non è possibile dedurre dal delegato '\<NomeDelegato >'</span><span class="sxs-lookup"><span data-stu-id="b5905-102">Type arguments for extension method '\<methodName>' defined in '\<typeName>' could not be inferred from the delegate '\<delegateName>'</span></span>
+# <a name="type-arguments-for-extension-method-methodname-defined-in-typename-could-not-be-inferred-from-the-delegate-delegatename"></a><span data-ttu-id="80845-102">\<methodName>Non è stato possibile dedurre gli argomenti di tipo per il metodo di estensione '' definito in ' \<typeName> ' dal delegato ' \<delegateName> '</span><span class="sxs-lookup"><span data-stu-id="80845-102">Type arguments for extension method '\<methodName>' defined in '\<typeName>' could not be inferred from the delegate '\<delegateName>'</span></span>
 
-<span data-ttu-id="b5905-103">Un'istruzione di assegnazione usa `AddressOf` per assegnare l'indirizzo di un metodo di estensione generico a un delegato, ma non fornisce alcun argomento di tipo al metodo generico.</span><span class="sxs-lookup"><span data-stu-id="b5905-103">An assignment statement uses `AddressOf` to assign the address of a generic extension method to a delegate, but it does not supply any type arguments to the extension method.</span></span>
+<span data-ttu-id="80845-103">Un'istruzione di assegnazione usa `AddressOf` per assegnare l'indirizzo di un metodo di estensione generico a un delegato, ma non fornisce alcun argomento di tipo al metodo generico.</span><span class="sxs-lookup"><span data-stu-id="80845-103">An assignment statement uses `AddressOf` to assign the address of a generic extension method to a delegate, but it does not supply any type arguments to the extension method.</span></span>
 
-<span data-ttu-id="b5905-104">Di norma, quando si richiama un metodo generico, si fornisce un argomento di tipo per ogni parametro di tipo definito dal metodo generico.</span><span class="sxs-lookup"><span data-stu-id="b5905-104">Normally, when you invoke a generic method, you supply a type argument for each type parameter that the generic method defines.</span></span> <span data-ttu-id="b5905-105">Se non si specifica alcun argomento di tipo, il compilatore prova a dedurre i tipi da passare ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="b5905-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="b5905-106">Se il contesto non fornisce informazioni sufficienti per consentire al compilatore di dedurre i tipi, genera un errore.</span><span class="sxs-lookup"><span data-stu-id="b5905-106">If the context does not provide enough information for the compiler to infer the types, an error is generated.</span></span>
+<span data-ttu-id="80845-104">Di norma, quando si richiama un metodo generico, si fornisce un argomento di tipo per ogni parametro di tipo definito dal metodo generico.</span><span class="sxs-lookup"><span data-stu-id="80845-104">Normally, when you invoke a generic method, you supply a type argument for each type parameter that the generic method defines.</span></span> <span data-ttu-id="80845-105">Se non si specifica alcun argomento di tipo, il compilatore prova a dedurre i tipi da passare ai parametri di tipo.</span><span class="sxs-lookup"><span data-stu-id="80845-105">If you do not supply any type arguments, the compiler attempts to infer the types to be passed to the type parameters.</span></span> <span data-ttu-id="80845-106">Se il contesto non fornisce informazioni sufficienti per consentire al compilatore di dedurre i tipi, genera un errore.</span><span class="sxs-lookup"><span data-stu-id="80845-106">If the context does not provide enough information for the compiler to infer the types, an error is generated.</span></span>
 
-<span data-ttu-id="b5905-107">**ID errore:** BC36581</span><span class="sxs-lookup"><span data-stu-id="b5905-107">**Error ID:** BC36581</span></span>
+<span data-ttu-id="80845-107">**ID errore:** BC36581</span><span class="sxs-lookup"><span data-stu-id="80845-107">**Error ID:** BC36581</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="b5905-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b5905-108">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="80845-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="80845-108">To correct this error</span></span>
 
-- <span data-ttu-id="b5905-109">Specificare gli argomenti di tipo per il metodo di estensione nell'espressione `AddressOf` .</span><span class="sxs-lookup"><span data-stu-id="b5905-109">In the `AddressOf` expression, specify the type arguments for the extension method.</span></span>
+- <span data-ttu-id="80845-109">Specificare gli argomenti di tipo per il metodo di estensione nell'espressione `AddressOf` .</span><span class="sxs-lookup"><span data-stu-id="80845-109">In the `AddressOf` expression, specify the type arguments for the extension method.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="b5905-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b5905-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="80845-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="80845-110">See also</span></span>
 
-- [<span data-ttu-id="b5905-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b5905-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="b5905-112">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="b5905-112">AddressOf Operator</span></span>](../../visual-basic/language-reference/operators/addressof-operator.md)
-- [<span data-ttu-id="b5905-113">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b5905-113">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="b5905-114">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="b5905-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="b5905-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="b5905-115">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="80845-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="80845-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="80845-112">Operatore AddressOf</span><span class="sxs-lookup"><span data-stu-id="80845-112">AddressOf Operator</span></span>](../language-reference/operators/addressof-operator.md)
+- [<span data-ttu-id="80845-113">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="80845-113">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="80845-114">Type List</span><span class="sxs-lookup"><span data-stu-id="80845-114">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="80845-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="80845-115">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
