--- a/docs/visual-basic/misc/bc36582.md
+++ b/docs/visual-basic/misc/bc36582.md
@@ -1,5 +1,5 @@
 ---
-title: Numero eccessivo di argomenti al metodo di estensione '<methodname>'definito '<typename>'
+title: Troppi argomenti per il metodo di estensione ' <methodname> ' definito in ' <typename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36582
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC36582
 ms.assetid: e91fd85b-6853-4377-b1d2-367752f8deec
-ms.openlocfilehash: d3da9de9301c04487c9aa2a02af1205e3a42228c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea4b50274f0959a75bd36874f6e66528c812a4cf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663634"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377496"
 ---
-# <a name="too-many-arguments-to-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="0ef6c-102">Numero eccessivo di argomenti al metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="0ef6c-102">Too many arguments to extension method '\<methodname>' defined in '\<typename>'</span></span>
-<span data-ttu-id="0ef6c-103">Il numero di argomenti forniti in una chiamata a un metodo di estensione supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="0ef6c-103">The number of arguments supplied in a call to an extension method exceeds the number of arguments defined for the method.</span></span>  
+# <a name="too-many-arguments-to-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="7ccac-102">Troppi argomenti per il metodo di estensione ' \<methodname> ' definito in ' \<typename> '</span><span class="sxs-lookup"><span data-stu-id="7ccac-102">Too many arguments to extension method '\<methodname>' defined in '\<typename>'</span></span>
+<span data-ttu-id="7ccac-103">Il numero di argomenti forniti in una chiamata a un metodo di estensione supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="7ccac-103">The number of arguments supplied in a call to an extension method exceeds the number of arguments defined for the method.</span></span>  
   
- <span data-ttu-id="0ef6c-104">**ID errore:** BC36582</span><span class="sxs-lookup"><span data-stu-id="0ef6c-104">**Error ID:** BC36582</span></span>  
+ <span data-ttu-id="7ccac-104">**ID errore:** BC36582</span><span class="sxs-lookup"><span data-stu-id="7ccac-104">**Error ID:** BC36582</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0ef6c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0ef6c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7ccac-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7ccac-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0ef6c-106">Consultare la definizione del metodo di estensione e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="0ef6c-106">Consult the definition of the extension method, and remove the extra arguments from the call.</span></span>  
+- <span data-ttu-id="7ccac-106">Consultare la definizione del metodo di estensione e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="7ccac-106">Consult the definition of the extension method, and remove the extra arguments from the call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0ef6c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0ef6c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7ccac-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7ccac-107">See also</span></span>
 
-- [<span data-ttu-id="0ef6c-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="0ef6c-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [<span data-ttu-id="0ef6c-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="0ef6c-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="7ccac-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="7ccac-108">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="7ccac-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="7ccac-109">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
