--- a/docs/visual-basic/misc/bc36584.md
+++ b/docs/visual-basic/misc/bc36584.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>'nel metodo di estensione'<methodname>'definito '<typename>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' del metodo di estensione '<methodname>' definito in '<typename>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36584
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC36584
 ms.assetid: 0dbc4e18-407a-4a18-82d2-26ee14f82da4
-ms.openlocfilehash: fbaab8554a36c0c8283524533bed4948021149d9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e89e91e0203ddd1fe0436f91f3966ee6f5ea2b45
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619152"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377444"
 ---
-# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-argument"></a><span data-ttu-id="1fd60-102">Parametro '\<nomeparametro >' nel metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="1fd60-102">Parameter '\<parametername>' in extension method '\<methodname>' defined in '\<typename>' already has a matching argument</span></span>
-<span data-ttu-id="1fd60-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="1fd60-103">An argument is passed by name more than once in the same procedure call.</span></span>  
+# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-argument"></a><span data-ttu-id="6d9e5-102">Il parametro '\<parametername>' del metodo di estensione '\<methodname>' definito in '\<typename>' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="6d9e5-102">Parameter '\<parametername>' in extension method '\<methodname>' defined in '\<typename>' already has a matching argument</span></span>
+<span data-ttu-id="6d9e5-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="6d9e5-103">An argument is passed by name more than once in the same procedure call.</span></span>  
   
- <span data-ttu-id="1fd60-104">**ID errore:** BC36584</span><span class="sxs-lookup"><span data-stu-id="1fd60-104">**Error ID:** BC36584</span></span>  
+ <span data-ttu-id="6d9e5-104">**ID errore:** BC36584</span><span class="sxs-lookup"><span data-stu-id="6d9e5-104">**Error ID:** BC36584</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1fd60-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1fd60-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6d9e5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6d9e5-105">To correct this error</span></span>  
   
-- <span data-ttu-id="1fd60-106">Controllare se uno dei nomi degli argomenti sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="1fd60-106">Check to see whether one of the argument names is misspelled.</span></span>  
+- <span data-ttu-id="6d9e5-106">Controllare se uno dei nomi degli argomenti sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="6d9e5-106">Check to see whether one of the argument names is misspelled.</span></span>  
   
-- <span data-ttu-id="1fd60-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="1fd60-107">Remove the duplicated argument from the argument list.</span></span>  
+- <span data-ttu-id="6d9e5-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="6d9e5-107">Remove the duplicated argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1fd60-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1fd60-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6d9e5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6d9e5-108">See also</span></span>
 
-- [<span data-ttu-id="1fd60-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="1fd60-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="1fd60-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="1fd60-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="6d9e5-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="6d9e5-109">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="6d9e5-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="6d9e5-110">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
